--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,50 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-08-11 14:01:56 -0500 
+%% Created for Jeff Erickson at 2019-12-04 13:04:40 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{drs-tsaa-10,
+	Author = {De Loera, Jesús and Rambau, Jörg and Santos, Francisco},
+	Date-Added = {2019-12-04 12:54:37 -0600},
+	Date-Modified = {2019-12-04 13:04:40 -0600},
+	Doi = {10.1007/978-3-642-12971-1},
+	Number = {25},
+	Publisher = {Springer},
+	Series = {Algorithms and Computation in Mathematics},
+	Title = {Triangulations: Structures for Algorithms and Applications},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-642-12971-1}}
+
+@article{l-tt-72,
+	Author = {Lawson, Charles L.},
+	Date-Added = {2019-12-04 12:51:03 -0600},
+	Date-Modified = {2019-12-04 12:51:50 -0600},
+	Doi = {10.1016/0012-365X(72)90093-3},
+	Journal = {Discrete Math.},
+	Number = {4},
+	Pages = {365--372},
+	Title = {Transforming triangulations},
+	Volume = {3},
+	Year = {1972},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0012-365X(72)90093-3}}
+
+@article{ai-gravd-88,
+	Author = {Aurenhammer, Franz and Imai, Hiroshi},
+	Date-Added = {2019-12-04 12:48:16 -0600},
+	Date-Modified = {2019-12-04 12:49:17 -0600},
+	Doi = {10.1007/BF00181613},
+	Journal = {Geom. Dedicata},
+	Number = {1},
+	Pages = {65--75},
+	Title = {Geometric relations among {Voronoi} diagrams},
+	Volume = {27},
+	Year = {1988},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF00181613}}
 
 @inproceedings{aam-gpe-18,
 	Arxiv = {1704.06969},
@@ -19,7 +57,8 @@
 	Pages = {65--73},
 	Read = {1},
 	Title = {The art gallery problem is {$\exists\mathbb{R}$}-complete},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1145/3188745.3188868}}
 
 @article{b-vdch-79,
 	Author = {Brown, Kevin Q.},
@@ -37,12 +76,12 @@
 @article{a-pdpaa-87,
 	Author = {Aurenhammer, Franz},
 	Date-Added = {2019-03-21 09:30:38 +0100},
-	Date-Modified = {2019-03-21 09:31:12 +0100},
+	Date-Modified = {2019-12-04 12:46:31 -0600},
 	Doi = {10.1137/0216006},
 	Journal = {SIAM J. Comput.},
 	Number = {1},
 	Pages = {78--96},
-	Title = {Power diagrams: properties, algorithms and applications},
+	Title = {Power diagrams: {Properties}, algorithms and applications},
 	Volume = {16},
 	Year = {1987},
 	Bdsk-Url-1 = {https://doi.org/10.1137/0216006}}
