--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,704 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-11-26 13:38:36 -0600 
+%% Created for Jeff Erickson at 2020-04-26 12:39:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cgls-ebfgv-16,
+	Arxiv = {1405.3686},
+	Author = {Cherniavsky, Yonah and Goldstein, Avraham and Levit, Vadim E. and Schwarz, Richard},
+	Date-Added = {2020-04-26 12:29:20 -0500},
+	Date-Modified = {2020-04-26 12:32:06 -0500},
+	Doi = {10.1016/j.ipl.2016.02.002},
+	Journal = {Inf. Proc. Letters},
+	Keywords = {rigid vs flexible group-labeled graphs},
+	Number = {7},
+	Pages = {484--488},
+	Title = {Enumeration of balanced finite group valued functions on directed graphs},
+	Volume = {116},
+	Year = {2016}}
+
+@article{cgl-bagfd-17,
+	Arxiv = {1303.5456},
+	Author = {Cherniavsky, Yonah and Goldstein, Avraham and Levit, Vadim E.},
+	Date-Added = {2020-04-26 12:11:27 -0500},
+	Date-Modified = {2020-04-26 12:39:08 -0500},
+	Doi = {10.26493/1855-3974.910.460},
+	Journal = {Ars Math. Contemp.},
+	Keywords = {rigid vs flexible group-labeled graphs},
+	Number = {2},
+	Pages = {307--315},
+	Title = {Balanced {Abelian} group-valued functions on directed graphs},
+	Volume = {13},
+	Year = {2017}}
+
+@phdthesis{h-lpglg-09,
+	Author = {Huynh, Tony},
+	Date-Added = {2020-04-24 15:17:47 -0500},
+	Date-Modified = {2020-04-24 15:23:26 -0500},
+	Month = {September},
+	School = {U. Waterloo},
+	Title = {The Linkage Problem for Group-labelled Graphs},
+	Url = {http://hdl.handle.net/10012/4716},
+	Year = {2009},
+	Bdsk-Url-1 = {http://hdl.handle.net/10012/4716}}
+
+@inproceedings{kky-fpggw-15,
+	Arxiv = {1807.00109},
+	Author = {Kawase, Yasushi and Kobayasi, Yusuke and Yamaguchi, Yutaro},
+	Booktitle = {Proc. 42nd Int. Colloq. Automata Lang. Prog.},
+	Date-Added = {2020-04-24 15:12:54 -0500},
+	Date-Modified = {2020-04-24 15:16:38 -0500},
+	Doi = {10.1007/978-3-662-47672-7_65},
+	Number = {9134},
+	Pages = {797--809},
+	Publisher = {Springer},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {Finding a path in group-labeled graphs with two labels forbidden},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-662-47672-7_65}}
+
+@article{m-crmto-94,
+	Author = {Mohar, Bojan},
+	Date-Added = {2020-03-16 17:41:45 -0500},
+	Date-Modified = {2020-03-16 17:44:57 -0500},
+	Doi = {10.1007/BF02573996},
+	Journal = {Discrete Comput. Geom.},
+	Keywords = {essentially simple and essentially 3-connected toroidal maps can be convexified.},
+	Number = {1},
+	Pages = {83--95},
+	Title = {Convex representations of maps on the torus and other flat surfaces},
+	Volume = {11},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02573996}}
+
+@incollection{t-prg-82,
+	Author = {Thomassen, Carsten},
+	Booktitle = {Progress in Graph Theory},
+	Comments = {Simplifies Mani-Levitska's proof that every torus graph has a straight embedding. Not available online.},
+	Date-Added = {2020-03-16 17:21:01 -0500},
+	Date-Modified = {2020-03-16 17:33:48 -0500},
+	Note = {Cited in \cite{d-eppgc-04}},
+	Pages = {43--69},
+	Publisher = {Academic Press},
+	Title = {Plane representations of graphs},
+	Year = {1982}}
+
+@article{t-pdfig-80,
+	Author = {Thomassen, Carsten},
+	Comments = {3-connected locally finite planar graphs have convex embeddings},
+	Date-Added = {2020-03-16 17:18:20 -0500},
+	Date-Modified = {2020-03-16 17:20:58 -0500},
+	Doi = {10.1016/0095-8956(80)90083-0},
+	Journal = {J. Comb. Theory Ser. B},
+	Number = {2},
+	Pages = {244-271},
+	Title = {Planarity and duality of finite and infinite graphs},
+	Volume = {29},
+	Year = {1980},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0095-8956(80)90083-0}}
+
+@article{d-eppgc-04,
+	Author = {Delgado-Friedrichs, Olaf},
+	Date-Added = {2020-03-16 16:33:21 -0500},
+	Date-Modified = {2020-03-16 17:12:25 -0500},
+	Doi = {10.1007/s00454-004-1147-x},
+	Journal = {Discrete Comput. Geom.},
+	Keywords = {Toroidal maps can be straightened while preserving all symmetries},
+	Number = {1},
+	Pages = {67--81},
+	Title = {Equilibrium placement of periodic graphs and convexity of plane tilings},
+	Volume = {33},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-004-1147-x}}
+
+@article{gk-gpn-76,
+	Author = {Guigas, Bruno and Klee, Wilfrid E.},
+	Comments = {Conjectured every essentially 3-connected torus map can be straightened. No DOI: https://www.degruyter.com/view/j/zkri.1976.144.issue-1-6/issue-files/zkri.1976.144.issue-1-6.xml},
+	Date-Added = {2020-03-16 16:26:17 -0500},
+	Date-Modified = {2020-03-16 16:30:15 -0500},
+	Journal = {Z. Kristallographie},
+	Number = {1--6},
+	Pages = {304--313},
+	Title = {On the generation of plane nets},
+	Volume = {144},
+	Year = {1976}}
+
+@article{g-taet-83,
+	Author = {Gritzmann, Peter},
+	Date-Added = {2020-03-16 16:05:26 -0500},
+	Date-Modified = {2020-03-16 16:11:00 -0500},
+	Doi = {10.1112/S002557930001055X},
+	Journal = {Mathematika},
+	Keywords = {Necessary and sifficient degree conditions for a toroidal map to be realizable as a toroidal polyhedron in 3-space.},
+	Number = {2},
+	Pages = {274--290},
+	Title = {The toroidal analogue to {Eberhard's} theorem},
+	Volume = {30},
+	Year = {1983},
+	Bdsk-Url-1 = {https://doi.org/10.1112/S002557930001055X}}
+
+@article{m-srmto-96,
+	Author = {Mohar, Bojan},
+	Comments = {Every essentially simple toroidal map is equivalent to a geodesic map},
+	Date-Added = {2020-03-16 16:02:48 -0500},
+	Date-Modified = {2020-03-16 16:14:29 -0500},
+	Doi = {10.1016/0012-365X(94)00381-R},
+	Journal = {Discrete Math.},
+	Number = {1--3},
+	Pages = {173--181},
+	Title = {Straight-line representations of maps on the torus and other flat surfaces},
+	Volume = {155},
+	Year = {1996},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0012-365X(94)00381-R}}
+
+@article{mgk-rnm-79,
+	Author = {Mani-Levitska, Peter and Guigas, Bruno and Klee, Wilfrid E.},
+	Comments = {Every essentially 3-conected toroidal map is isomorphic to a toroidal map with convex faces},
+	Date-Added = {2020-03-16 15:41:24 -0500},
+	Date-Modified = {2020-03-16 16:04:40 -0500},
+	Doi = {10.1007/BF00181483},
+	Journal = {Geom. Dedicata},
+	Pages = {127--137},
+	Title = {Rectifiable $n$-periodic maps},
+	Volume = {8},
+	Year = {1979},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF00181483}}
+
+@incollection{wapc-cpdts-13,
+	Author = {Whiteley, Walter and Ash, Peter F. and Poiker, Ethan and Crapo, Henry},
+	Booktitle = {Shaping Space: Exploring Polyhedra in Nature, Art, and the Geometrical Imagination},
+	Chapter = {18},
+	Date-Added = {2019-12-04 18:17:48 -0600},
+	Date-Modified = {2019-12-04 18:21:44 -0600},
+	Doi = {10.1007/978-0-387-92714-5_18},
+	Editor = {Senechal, Marjorie},
+	Pages = {231--251},
+	Publisher = {Springer},
+	Title = {Convex polyhedra, {Dirichlet} tesselations, and spider webs},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-0-387-92714-5_18}}
+
+@article{a-pdpaa-87,
+	Author = {Aurenhammer, Franz},
+	Date-Added = {2019-12-04 12:38:12 -0600},
+	Date-Modified = {2019-12-04 12:39:19 -0600},
+	Doi = {10.1137/0216006},
+	Journal = {SIAM J. Comput.},
+	Number = {1},
+	Pages = {78--96},
+	Title = {Power Diagrams: {Properties}, Algorithms and Applications},
+	Volume = {16},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0216006}}
+
+@book{s-icptd-05,
+	Author = {Stephenson, Kenneth},
+	Date-Added = {2019-12-04 12:10:35 -0600},
+	Date-Modified = {2019-12-04 12:11:11 -0600},
+	Publisher = {Cambridge Univ. Press},
+	Title = {Introduction to Circle Packing: The Theory of Discrete Analytic Functions},
+	Year = {2005}}
+
+@book{z-lp-95,
+	Author = {Ziegler, Günter M.},
+	Date-Added = {2019-12-04 12:04:47 -0600},
+	Date-Modified = {2019-12-04 12:05:55 -0600},
+	Number = {152},
+	Publisher = {Springer},
+	Series = {Graduate Texts in Mathematics},
+	Title = {Lectures on Polytopes},
+	Year = {1995}}
+
+@inproceedings{btv-dtosl-16,
+	Author = {Bogdanov, Mikhail and Teillaud, Monique and Vegter, Gert},
+	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
+	Date-Added = {2019-12-03 15:24:37 -0600},
+	Date-Modified = {2019-12-03 15:28:42 -0600},
+	Doi = {10.4230/LIPIcs.SoCG.2016.20},
+	Editor = {Fekete, Sándor and Lubiw, Anna},
+	Number = {51},
+	Pages = {20:1--20:17},
+	Series = {Leibniz Int. Proc. Informatics},
+	Title = {Delaunay Triangulations on Orientable Surfaces of Low Genus},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.4230/LIPIcs.SoCG.2016.20}}
+
+@article{ct-dtced-16,
+	Author = {Caroli, Manuel and Teillaud, Monique},
+	Date-Added = {2019-12-03 06:15:49 -0600},
+	Date-Modified = {2019-12-03 15:33:14 -0600},
+	Doi = {10.1007/s00454-016-9782-6},
+	Journal = {Discrete Comput. Geom.},
+	Number = {4},
+	Pages = {827--853},
+	Title = {Delaunay Triangulations of Closed {Euclidean} $d$-Orbifolds},
+	Volume = {55},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-016-9782-6}}
+
+@book{gm-cgs-01,
+	Author = {Grima, Clara I. and Márquez, Alberto},
+	Date-Added = {2019-12-03 06:08:32 -0600},
+	Date-Modified = {2019-12-03 06:09:27 -0600},
+	Publisher = {Springer},
+	Title = {Computational Geometry on Surfaces},
+	Year = {2001}}
+
+@phdthesis{c-tpsos-10,
+	Author = {Caroli, Manuel},
+	Date-Added = {2019-12-03 06:05:55 -0600},
+	Date-Modified = {2019-12-03 06:06:50 -0600},
+	School = {Université Nice Sophia Antipolis},
+	Title = {Triangulating Point Sets in Orbit Spaces},
+	Url = {https://tel.archives-ouvertes.fr/tel-00552215/},
+	Year = {2010},
+	Bdsk-Url-1 = {https://tel.archives-ouvertes.fr/tel-00552215/}}
+
+@article{ei-drmwc-79,
+	Author = {Ehrlich, Paul E. and {Im Hof}, Hans-Christoph},
+	Date-Added = {2019-12-03 05:50:50 -0600},
+	Date-Modified = {2019-12-03 15:35:01 -0600},
+	Doi = {10.1007/BF02566298},
+	Journal = {Comment. Math. Helvetici},
+	Number = {1},
+	Pages = {642--658},
+	Title = {Dirichlet regions in manifolds without conjugate points},
+	Volume = {54},
+	Year = {1979},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02566298}}
+
+@book{l-gg-19,
+	Author = {Lovász, László},
+	Date-Added = {2019-12-03 05:41:10 -0600},
+	Date-Modified = {2019-12-03 05:42:45 -0600},
+	Number = {69},
+	Publisher = {Amer. Math. Soc.},
+	Series = {Colloquium Publications},
+	Title = {Graphs and Geometry},
+	Year = {2019}}
+
+@book{v-nms-1725,
+	Address = {Paris},
+	Author = {Varignon, Pierre},
+	Date-Added = {2019-12-03 05:21:11 -0600},
+	Date-Modified = {2019-12-03 05:25:06 -0600},
+	Publisher = {Claude Jombert},
+	Title = {Nouvelle mechanique ou statique, dont le projet fut donné en M.DC.LXXVII},
+	Url = {https://gallica.bnf.fr/ark:/12148/bpt6k5652714w.texteImage},
+	Year = {1725},
+	Bdsk-Url-1 = {https://gallica.bnf.fr/ark:/12148/bpt6k5652714w.texteImage}}
+
+@article{r-pepf-64,
+	Author = {Rankine, W. J. Macquorn},
+	Date-Added = {2019-12-03 05:05:39 -0600},
+	Date-Modified = {2019-12-03 05:10:24 -0600},
+	Doi = {10.1080/14786446408643629},
+	Journal = {London, Edinburgh, and Dublin Phil. Mag J. Sci.},
+	Keywords = {Maxwell-Cremona},
+	Number = {180},
+	Pages = {92},
+	Title = {Principle of the equilibrium of polyhedral frams},
+	Volume = {27},
+	Year = {1864},
+	Bdsk-Url-1 = {https://doi.org/10.1080/14786446408643629}}
+
+@book{c-gs-66,
+	Author = {Culmann, Carl},
+	Date-Added = {2019-12-03 05:04:54 -0600},
+	Date-Modified = {2019-12-03 05:13:27 -0600},
+	Keywords = {Maxwell-Cremona},
+	Publisher = {Meyer und Zeller},
+	Title = {Die Graphische Statik},
+	Url = {https://archive.org/details/diegraphischest01culmgoog},
+	Year = {1866},
+	Bdsk-Url-1 = {https://archive.org/details/diegraphischest01culmgoog}}
+
+@article{klv-cvnsrg-97,
+	Author = {Kotlov, Andrew and Lovász, László and Vempala, Santosh},
+	Date-Added = {2019-12-01 12:17:39 -0600},
+	Date-Modified = {2019-12-01 12:18:30 -0600},
+	Doi = {10.1007/BF01195002},
+	Journal = {Combinatorica},
+	Number = {4},
+	Pages = {483--521},
+	Title = {The {Colin de Verdière} number and sphere representations of a graph},
+	Volume = {17},
+	Year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01195002}}
+
+@article{bs-pff-10,
+	Author = {Borcea, Ciprian and Streinu, Ileana},
+	Date-Added = {2019-12-01 12:16:46 -0600},
+	Date-Modified = {2019-12-01 12:24:31 -0600},
+	Doi = {10.1098/rspa.2009.0676},
+	Journal = {Proc. Royal Soc. A},
+	Number = {2121},
+	Pages = {2633--2649},
+	Title = {Periodic frameworks and flexibility},
+	Volume = {466},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1098/rspa.2009.0676}}
+
+@article{l-rpcvn-01,
+	Author = {Lovász, László},
+	Date-Added = {2019-12-01 11:58:40 -0600},
+	Date-Modified = {2019-12-01 12:01:52 -0600},
+	Doi = {10.1006/jctb.2000.2027},
+	Journal = {J. Comb. Theory Ser. B},
+	Keywords = {Maxwell-Cremona (sort of)},
+	Number = {2},
+	Pages = {223--236},
+	Title = {Representations of polyhedra and the {Colin de Verdière} number},
+	Volume = {82},
+	Year = {2001},
+	Bdsk-Url-1 = {https://doi.org/10.1006/jctb.2000.2027}}
+
+@incollection{i-skfen-19,
+	Arxiv = {1707.02172},
+	Author = {Izmestiev, Ivan},
+	Booktitle = {Eighteen Essays in Non-Euclidean Geometry},
+	Comments = {Maxwell-Cremona},
+	Date-Added = {2019-12-01 11:40:19 -0600},
+	Date-Modified = {2019-12-01 11:58:38 -0600},
+	Doi = {10.4171/196-1/12},
+	Editor = {Alberge, Vincent and Papadopoulos, Athanase},
+	Number = {29},
+	Publisher = {Europ. Math. Soc.},
+	Series = {IRMA Lectures in Mathematics and Theoretical Physics},
+	Title = {Statics and kinematics of frameworks in {Euclidean} and non-{Euclidean} geometry},
+	Year = {2019},
+	Bdsk-Url-1 = {https://doi.org/10.4171/196-1/12}}
+
+@article{s-c-92,
+	Author = {Schramm, Oded},
+	Date-Added = {2019-12-01 10:30:48 -0600},
+	Date-Modified = {2019-12-01 10:31:29 -0600},
+	Doi = {10.1007/BF01231901},
+	Journal = {Invent. Math.},
+	Number = {1},
+	Pages = {543--560},
+	Title = {How to cage an egg},
+	Volume = {107},
+	Year = {1992},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01231901}}
+
+@article{bs-rpg-93,
+	Author = {Brightwell, Graham R. and Scheinerman, Edward R.},
+	Date-Added = {2019-12-01 10:28:26 -0600},
+	Date-Modified = {2019-12-01 10:29:37 -0600},
+	Doi = {10.1137/0406017},
+	Journal = {SIAM J. Discrete Math.},
+	Keywords = {Koebe},
+	Number = {2},
+	Pages = {214--229},
+	Title = {Representations of Planar Graphs},
+	Volume = {6},
+	Year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0406017}}
+
+@inproceedings{fr-pdcpr-18,
+	Annote = {Keywords: Disk packing, planar graphs, contact representation},
+	Author = {Felsner, Stefan and Rote, Günter},
+	Booktitle = {Proc. 2nd Symp. Simplicity in Algorithms},
+	Date-Added = {2019-12-01 10:26:27 -0600},
+	Date-Modified = {2019-12-01 10:27:47 -0600},
+	Doi = {10.4230/OASIcs.SOSA.2019.8},
+	Keywords = {Koebe},
+	Pages = {8:1--8:18},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+	Series = {OpenAccess Series in Informatics (OASIcs)},
+	Title = {{On Primal-Dual Circle Representations}},
+	Volume = {69},
+	Year = {2018},
+	Bdsk-Url-1 = {http://drops.dagstuhl.de/opus/volltexte/2018/10034},
+	Bdsk-Url-2 = {https://doi.org/10.4230/OASIcs.SOSA.2019.8}}
+
+@article{m-ptcpa-93,
+	Author = {Mohar, Bojan},
+	Date-Added = {2019-12-01 10:24:26 -0600},
+	Date-Modified = {2019-12-01 10:26:05 -0600},
+	Doi = {10.1016/0012-365X(93)90340-Y},
+	Journal = {Discrete Math.},
+	Keywords = {Koebe},
+	Number = {1--3},
+	Pages = {257--263},
+	Title = {A polynomial time circle packing algorithm},
+	Volume = {117},
+	Year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0012-365X(93)90340-Y}}
+
+@article{s-cgpcm-94,
+	Author = {Sachs, Horst},
+	Date-Added = {2019-12-01 10:20:10 -0600},
+	Date-Modified = {2019-12-01 10:23:38 -0600},
+	Doi = {Coin graphs, polyhedra, and conformal mapping},
+	Journal = {Discrete Math.},
+	Keywords = {Koebe},
+	Title = {Coin graphs, polyhedra, and conformal mapping},
+	Volume = {13},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/Coin%20graphs,%20polyhedra,%20and%20conformal%20mapping}}
+
+@incollection{h-rclpp-77,
+	Author = {Huffman, David},
+	Booktitle = {Machine Intelligence},
+	Comments = {Not available online},
+	Date-Added = {2019-12-01 09:25:39 -0600},
+	Date-Modified = {2019-12-01 09:30:30 -0600},
+	Editor = {Elcock, Edward W. and Michie, Donald},
+	Keywords = {Maxwell-Cremona},
+	Pages = {493--509},
+	Publisher = {Ellis Horwood Ltd. and John Wiley \& Sons},
+	Title = {Realizable configurations of lines in pictures of polyhedra},
+	Volume = {8},
+	Year = {1977}}
+
+@incollection{h-dcaps-77,
+	Author = {Huffman, David},
+	Booktitle = {Machine Intelligence},
+	Comments = {Not available online},
+	Date-Added = {2019-12-01 09:12:12 -0600},
+	Date-Modified = {2019-12-01 09:30:30 -0600},
+	Editor = {Elcock, Edward W. and Michie, Donald},
+	Keywords = {Maxwell-Cremona},
+	Pages = {475--492},
+	Publisher = {Ellis Horwood Ltd. and John Wiley \& Sons},
+	Title = {A duality concept for the analysis of polyhedral scenes},
+	Volume = {8},
+	Year = {1977}}
+
+@article{a-rpccc-87,
+	Author = {Aurenhammer, Franz},
+	Date-Added = {2019-12-01 09:01:16 -0600},
+	Date-Modified = {2019-12-03 15:32:25 -0600},
+	Doi = {10.1016/S0747-7171(87)80003-2},
+	Journal = {J. Symb. Comput.},
+	Keywords = {Maxwell-Cremona},
+	Number = {3},
+	Pages = {249--255},
+	Title = {Recognising polytopical cell complexes and constructing projection polyhedra},
+	Volume = {3},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0747-7171(87)80003-2}}
+
+@article{a-caecc-87,
+	Author = {Aurenhammer, Franz},
+	Date-Added = {2019-12-01 08:56:19 -0600},
+	Date-Modified = {2019-12-01 09:18:46 -0600},
+	Doi = {10.1007/BF02187870},
+	Journal = {Discrete Comput. Geom.},
+	Keywords = {Maxwell-Cremona (rediscovered)},
+	Number = {1},
+	Pages = {49--64},
+	Title = {A criterion for the affine equivalence of cell complexes in {$R^d$} and convex polyhedra in {$R^{d+1}$}},
+	Volume = {2},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02187870}}
+
+@inproceedings{s-rpfld-88,
+	Author = {Sugihara, Kokichi},
+	Booktitle = {Computational Morphology: A Computational Geometric Approach to the Analysis Of Form},
+	Date-Added = {2019-12-01 08:50:07 -0600},
+	Date-Modified = {2019-12-01 08:53:29 -0600},
+	Editor = {Toussaint, Godfried T.},
+	Number = {6},
+	Pages = {177--206},
+	Series = {Machine Intelligence and Pattern Recognition},
+	Title = {Realizability of polyhedrons from line drawings},
+	Year = {1988}}
+
+@article{orsss-nfwnr-04,
+	Arxiv = {math/0309156},
+	Author = {Orden, David and Rote, Günter and Santos, Fransisco and Servatius, Brigitte and Servatius, Herman and Whiteley, Walter},
+	Date-Added = {2019-12-01 08:42:58 -0600},
+	Date-Modified = {2019-12-01 08:44:36 -0600},
+	Doi = {10.1007/s00454-004-1139-x},
+	Journal = {Discrete Comput. Geom.},
+	Number = {4},
+	Pages = {567--600},
+	Title = {Non-crossing frameworks with non-crossing reciprocals},
+	Volume = {32},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-004-1139-x}}
+
+@article{s-eprmp-06,
+	Author = {Streinu, Ileana},
+	Date-Added = {2019-12-01 08:37:46 -0600},
+	Date-Modified = {2019-12-03 15:40:53 -0600},
+	Doi = {10.1007/s00454-006-3300-1},
+	Journal = {Discrete Comput. Geom.},
+	Number = {2},
+	Pages = {358},
+	Title = {Erratum to “{Pseudo}-Triangulations, Rigidity and Motion Planning”},
+	Volume = {35},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-006-3300-1}}
+
+@article{s-prmp-06,
+	Author = {Streinu, Ileana},
+	Date-Added = {2019-12-01 08:36:45 -0600},
+	Date-Modified = {2019-12-01 08:41:32 -0600},
+	Doi = {doi.org/10.1007/s00454-005-1184-0},
+	Journal = {Discrete Comput. Geom.},
+	Note = {Publisher's erratum in \cite{s-eprmp-06}},
+	Number = {4},
+	Pages = {587--635},
+	Title = {Pseudo-Triangulations, Rigidity and Motion Planning},
+	Volume = {34},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-005-1184-0}}
+
+@article{is-dtcsg-16,
+	Arxiv = {1402.1660},
+	Author = {Igambardiev, Alexander and Schulz, André},
+	Date-Added = {2019-12-01 08:25:06 -0600},
+	Date-Modified = {2019-12-01 08:28:26 -0600},
+	Doi = {10.1016/j.comgeo.2016.03.004},
+	Journal = {Comput. Geom. Theory Appl.},
+	Pages = {19--36},
+	Title = {A duality transform for constructing small grid embeddings of 3d polytopes},
+	Volume = {56},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.comgeo.2016.03.004}}
+
+@article{ds-esppg-17,
+	Arxiv = {1403.7980},
+	Author = {Demaine, Erik D. and Schulz, André},
+	Date-Added = {2019-12-01 08:22:39 -0600},
+	Date-Modified = {2019-12-01 08:31:38 -0600},
+	Doi = {10.1007/s00454-017-9887-6},
+	Journal = {Discrete Comput. Geom.},
+	Number = {4},
+	Pages = {782--809},
+	Title = {Embedding stacked polytopes on a polynomial-size grid},
+	Volume = {57},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-017-9887-6}}
+
+@article{s-d3gvr-11,
+	Author = {Schulz, André},
+	Date-Added = {2019-12-01 08:19:43 -0600},
+	Date-Modified = {2019-12-01 08:21:43 -0600},
+	Doi = {10.7155/jgaa.00216},
+	Journal = {J. Graph Algorithms Appl.},
+	Number = {1},
+	Pages = {33--52},
+	Title = {Drawing 3-Polytopes with Good Vertex Resolution},
+	Volume = {15},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.7155/jgaa.00216}}
+
+@inproceedings{eg-dspgt-95,
+	Author = {Eades, Peter and Garvan, Patrick},
+	Booktitle = {Proc. 2nd Symp. Graph Drawing},
+	Date-Added = {2019-12-01 08:16:25 -0600},
+	Date-Modified = {2019-12-01 08:18:20 -0600},
+	Doi = {10.1007/BFb0021805},
+	Number = {1027},
+	Pages = {212--223},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {Drawing stressed planar graphs in three dimensions},
+	Year = {1995},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BFb0021805}}
+
+@inproceedings{cgt-cdg23-96,
+	Author = {Chrobak, Marek and Goodrich, Michael T. and Tamassia, Roberto},
+	Booktitle = {Proc. 12th Ann. Symp. Comput. Geom.},
+	Date-Added = {2019-12-01 08:10:36 -0600},
+	Date-Modified = {2019-12-01 08:11:20 -0600},
+	Doi = {10.1145/237218.237401},
+	Pages = {319--328},
+	Title = {Convex Drawings of Graphs in Two and Three Dimensions (Preliminary Version)},
+	Year = {1996},
+	Bdsk-Url-1 = {https://doi.org/10.1145/237218.237401}}
+
+@article{rrs-sge3-11,
+	Author = {{Ribó Mor}, Ares and Rote, Günter and Schulz, André},
+	Date-Added = {2019-12-01 07:30:44 -0600},
+	Date-Modified = {2019-12-01 07:31:42 -0600},
+	Doi = {10.1007/s00454-010-9301-0},
+	Journal = {Discrete Comput. Geom.},
+	Number = {1},
+	Pages = {65--87},
+	Title = {Small grid embeddings of 3-polytopes},
+	Volume = {45},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-010-9301-0}}
+
+@article{os-qst-94,
+	Author = {Onn, Shmuel and Sturmfels, Bernd},
+	Date-Added = {2019-12-01 07:25:05 -0600},
+	Date-Modified = {2019-12-01 07:28:42 -0600},
+	Journal = {Beitr. Algebra Geom.},
+	Number = {1},
+	Pages = {125--129},
+	Title = {A quantitative {Steinitz'} theorem},
+	Url = {https://www.emis.de/journals/BAG/vol.35/no.1/},
+	Volume = {35},
+	Year = {1994},
+	Bdsk-Url-1 = {https://www.emis.de/journals/BAG/vol.35/no.1/}}
+
+@article{w-mspp-82,
+	Author = {Whiteley, Walter},
+	Date-Added = {2019-12-01 07:12:52 -0600},
+	Date-Modified = {2019-12-01 07:14:43 -0600},
+	Journal = {Topologie structurale / Structural Topology},
+	Pages = {13--38},
+	Title = {Motion and stresses of projected polyhedra},
+	Url = {http://hdl.handle.net/2099/989},
+	Volume = {7},
+	Year = {1982},
+	Bdsk-Url-1 = {http://hdl.handle.net/2099/989}}
+
+@inproceedings{cdds-dgpde-13,
+	Author = {Crane, Keenan and de~Goes, Fernando and Desbrun, Mathieu and Schröder, Peter},
+	Booktitle = {ACM SIGGRAPH 2013 courses},
+	Comments = {126 pages},
+	Date-Added = {2019-11-30 17:25:05 -0600},
+	Date-Modified = {2019-11-30 17:29:24 -0600},
+	Publisher = {ACM},
+	Series = {SIGGRAPH '13},
+	Title = {Digital Geometry Processing with Discrete Exterior Calculus},
+	Year = {2013}}
+
+@book{c-ddgai-19,
+	Author = {Crane, Keenan},
+	Date-Added = {2019-11-30 17:24:38 -0600},
+	Date-Modified = {2019-11-30 17:28:44 -0600},
+	Month = {May},
+	Title = {Discrete Differential Geometry: An Applied Introduction},
+	Url = {http://www.cs.cmu.edu/~kmcrane/Projects/DDG/paper.pdf},
+	Year = {2019},
+	Bdsk-Url-1 = {http://www.cs.cmu.edu/~kmcrane/Projects/DDG/paper.pdf}}
+
+@article{llw-rbceg-88,
+	Author = {Linial, Nati and Lovász, László and Widgerson, Avi},
+	Date-Added = {2019-11-30 17:14:59 -0600},
+	Date-Modified = {2019-11-30 17:16:01 -0600},
+	Doi = {10.1007/BF02122557},
+	Journal = {Combinatorica},
+	Number = {1},
+	Pages = {91--102},
+	Title = {Rubber bands, convex embeddings, and graph connectivity},
+	Volume = {8},
+	Year = {1988},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02122557}}
+
+@article{m-alukp-97,
+	Author = {Minkowski, Herman},
+	Comments = {Every set of vectors that sums to zero contains the area-weighted normal vectors of a convex polytope},
+	Date-Added = {2019-11-26 13:58:10 -0600},
+	Date-Modified = {2019-11-26 14:00:29 -0600},
+	Journal = {Nachr. Ges. Wiss. Göttingen},
+	Keywords = {Minkowski's theorem},
+	Pages = {198--219},
+	Title = {Allgemeine {Lehrsätze} über die konvexen {Polyeder}},
+	Year = {1897}}
 
 @article{m-atrpf-67,
 	Author = {Maxwell, James Clerk},
@@ -1462,15 +2154,15 @@
 @article{cw-psspp-93,
 	Author = {Crapo, Henry and Whiteley, Walter},
 	Date-Added = {2019-03-11 12:48:25 +0100},
-	Date-Modified = {2019-03-11 13:06:23 +0100},
+	Date-Modified = {2019-12-01 07:15:17 -0600},
 	Journal = {Topologie structurale / Structural Topology},
 	Keywords = {Maxwell-Cremona, converse of Maxwell's lifting theorem},
 	Pages = {55--77},
 	Title = {Plane self stresses and projected polyhedra {I:} {The} basic pattern},
-	Url = {http://www-iri.upc.es/people/ros/StructuralTopology/ST20/st20.html},
+	Url = {http://hdl.handle.net/2099/1091},
 	Volume = {20},
 	Year = {1993},
-	Bdsk-Url-1 = {http://www-iri.upc.es/people/ros/StructuralTopology/ST20/st20.html}}
+	Bdsk-Url-1 = {http://hdl.handle.net/2099/1091}}
 
 @book{r-mam-58,
 	Author = {Rankine, William John Macquorn},
@@ -4223,7 +4915,8 @@
 @article{c-nigcp-90,
 	Author = {{Colin de Verdière}, Yves},
 	Date-Added = {2015-08-18 21:14:50 +0000},
-	Date-Modified = {2015-08-18 21:24:16 +0000},
+	Date-Modified = {2019-12-03 15:33:54 -0600},
+	Doi = {10.1016/0095-8956(90)90093-F},
 	Journal = {J. Comb. Theory Ser. B},
 	Note = {In French, English translation in \cite{c-ngicp-93}},
 	Number = {1},
@@ -4231,7 +4924,8 @@
 	Read = {1},
 	Title = {Sur un nouvel invariant des graphes et un critère de planarité},
 	Volume = {50},
-	Year = {1990}}
+	Year = {1990},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0095-8956(90)90093-F}}
 
 @article{bc-mvpte-95,
 	Author = {Bacher, Roland and {Colin de Verdière}, Yves},
@@ -12226,7 +12920,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{g-pmrpw-12,
 	Author = {Grünbaum, Branko},
 	Date-Added = {2011-12-06 11:11:39 +0000},
-	Date-Modified = {2012-05-22 12:39:26 +0000},
+	Date-Modified = {2019-12-01 07:29:48 -0600},
+	Doi = {10.1007/s13366-011-0047-5},
 	Journal = {Beitr. Algebra Geom.},
 	Number = {1},
 	Pages = {57--71},
@@ -14060,7 +14755,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Indermitte, Clause and Liebling, Thomas M. and Troyanov, Marc and Clemençon, Heinz},
 	Comment = {MOSTLY proves termination of flip algorithm, doesn't cite earier papers},
 	Date-Added = {2011-06-02 23:29:27 -0500},
-	Date-Modified = {2012-05-06 20:20:43 +0000},
+	Date-Modified = {2019-12-03 15:39:31 -0600},
+	Doi = {10.1016/S0304-3975(00)00248-6},
 	Journal = {Theoret. Comput. Sci.},
 	Keywords = {intrinsic Delaunay},
 	Number = {{1--2}},
@@ -14068,20 +14764,25 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Read = {1},
 	Title = {Voronoi diagrams on piecewise flat surfaces and an application to biological growth},
 	Volume = {263},
-	Year = {2001}}
+	Year = {2001},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0304-3975(00)00248-6}}
 
 @article{bs-dloss-07,
+	Arxiv = {math/0503219},
 	Author = {Bobenko, Alexander I. and Springborn, Boris A.},
 	Comment = {proves uniqueness of Delaunay tessellation for arbitrary PL surfaces and (finally!) termination of flip algorithm},
 	Date-Added = {2011-06-02 22:48:41 -0500},
-	Date-Modified = {2012-05-06 20:23:56 +0000},
+	Date-Modified = {2019-12-03 15:31:44 -0600},
+	Doi = {10.1007/s00454-007-9006-1},
 	Journal = {Discrete Comput. Geom.},
 	Keywords = {intrinsic Delaunay},
+	Number = {4},
 	Pages = {740--756},
 	Read = {1},
 	Title = {A discrete {Laplace}-{Beltrami} operator for simplicial surfaces},
 	Volume = {38},
-	Year = {2007}}
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-007-9006-1}}
 
 @article{r-cog-03,
 	Author = {Rivin, Igor},
@@ -14112,14 +14813,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Rivin, Igor},
 	Comment = {triangulations of PL surfaces of any genus connected by flips},
 	Date-Added = {2011-06-02 22:08:11 -0500},
-	Date-Modified = {2012-05-06 20:26:18 +0000},
+	Date-Modified = {2019-12-03 15:05:19 -0600},
+	Doi = {10.2307/2118572},
 	Journal = {Ann. Math.},
 	Keywords = {intrinsic Delaunay},
 	Pages = {553--580},
 	Read = {1},
 	Title = {Euclidean structures on simplicial surfaces and hyperbolic volume},
 	Volume = {139},
-	Year = {1994}}
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.2307/2118572}}
 
 @incollection{t-spts-98,
 	Address = {Berkeley},
@@ -18085,13 +18788,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{a-cpfvl-70,
 	Author = {Andreev, E. M.},
 	Date-Added = {2009-10-13 01:40:15 -0500},
-	Date-Modified = {2012-05-03 14:14:53 +0000},
+	Date-Modified = {2019-12-03 07:06:39 -0600},
+	Doi = {10.1070/SM1970v012n02ABEH000920},
 	Journal = {Mat. Sbornik},
 	Number = {2},
 	Pages = {270--259},
 	Title = {On convex polyhedra of finite volume in {Lobačevskiĭ} space},
 	Volume = {12},
-	Year = {1970}}
+	Year = {1970},
+	Bdsk-Url-1 = {https://doi.org/10.1070/SM1970v012n02ABEH000920}}
 
 @book{t-gt3m-88,
 	Author = {Thurston, William P.},
@@ -18108,12 +18813,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{a-cpls-70,
 	Author = {Andreev, E. M.},
 	Date-Added = {2009-10-13 01:29:38 -0500},
-	Date-Modified = {2012-05-03 14:07:24 +0000},
+	Date-Modified = {2019-12-03 07:06:39 -0600},
+	Doi = {10.1070/SM1970v010n03ABEH001677},
 	Journal = {Mat. Sbornik},
+	Number = {3},
 	Pages = {413--440},
 	Title = {Convex polyhedra in {Lobačevskiĭ} space},
 	Volume = {10},
-	Year = {1970}}
+	Year = {1970},
+	Bdsk-Url-1 = {https://doi.org/10.1070/SM1970v010n03ABEH001677}}
 
 @article{k-kka-36,
 	Author = {Koebe, Paul},
