--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,77 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-11-05 17:08:10 -0600 
+%% Created for Jeff Erickson at 2020-04-27 11:07:33 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{w-pdmia-67,
+	Author = {Waite, William M.},
+	Comments = {Cycle detection in pne-vertex periodic graphs},
+	Date-Added = {2020-04-27 11:05:48 -0500},
+	Date-Modified = {2020-04-27 11:07:31 -0500},
+	Doi = {10.1145/321386.321392},
+	Journal = {J. Assoc. Comput. Mach.},
+	Number = {2},
+	Pages = {300--310},
+	Title = {Path detection in multidimensional iterative arrays},
+	Volume = {14},
+	Year = {1967}}
+
+@phdthesis{i-tdgtv-87,
+	Author = {Iwano, Kazuo},
+	Date-Added = {2020-04-27 10:51:51 -0500},
+	Date-Modified = {2020-04-27 10:54:35 -0500},
+	Month = {October},
+	School = {Princeton Univ.},
+	Title = {Tow-Dimensional Dynamic Graphs and their {VLSI} Applications},
+	Url = {https://search.proquest.com/docview/303485362},
+	Year = {1987}}
+
+@article{kmw-ocure-67,
+	Author = {Karp, Richard M. and Miller, Raymond E. and Winograd, Shmuel},
+	Date-Added = {2020-04-24 14:43:51 -0500},
+	Date-Modified = {2020-04-24 16:15:32 -0500},
+	Doi = {10.1145/321406.321418},
+	Journal = {J. Assoc. Comput. Mach.},
+	Keywords = {periodic graphs},
+	Number = {3},
+	Pages = {563--590},
+	Read = {1},
+	Title = {The organization of comptuations for uniform recurrence equations},
+	Volume = {14},
+	Year = {1967},
+	Bdsk-Url-1 = {https://doi.org/10.1145/321406.321418}}
+
+@inproceedings{is-tcigw-87,
+	Author = {Iwano, Kazuo and Steiglitz, Kenneth},
+	Booktitle = {Proc. 19th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2020-04-24 14:43:51 -0500},
+	Date-Modified = {2020-04-24 16:15:31 -0500},
+	Doi = {10.1145/28395.28401},
+	Pages = {46--55},
+	Read = {1},
+	Title = {Testing for cycles in infintie graphs with periodic structure},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1145/28395.28401}}
+
+@article{rk-riati-88,
+	Author = {Rao, Sailesh K. and Kailath, Thomas},
+	Date-Added = {2020-04-24 14:43:51 -0500},
+	Date-Modified = {2020-04-24 16:15:33 -0500},
+	Doi = {10.1109/5.4402},
+	Journal = {Proc. IEEE},
+	Keywords = {preiodic graphs},
+	Number = {3},
+	Pages = {259--269},
+	Read = {1},
+	Title = {Regular iterative algorithms and their implementation on processor arrays},
+	Volume = {76},
+	Year = {1988},
+	Bdsk-Url-1 = {https://doi.org/10.1109/5.4402}}
 
 @article{fw-tams-94,
 	Author = {Fredman, Michael L. and Willard, Dan E.},
