--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,53 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2020-04-27 11:07:33 -0500 
+%% Created for Jeff Erickson at 2020-07-13 13:40:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{j-easps-77,
+	Author = {Johnson, Donald B.},
+	Date-Added = {2020-07-12 17:50:21 -0500},
+	Date-Modified = {2020-07-12 17:50:45 -0500},
+	Doi = {10.1145/321992.321993},
+	Journal = {J. Assoc. Comput. Mach.},
+	Number = {1},
+	Pages = {1--13},
+	Title = {Efficient algorithms for shortest paths in sparse networks},
+	Volume = {24},
+	Year = {1977},
+	Bdsk-Url-1 = {https://doi.org/10.1145/321992.321993}}
+
+@article{ek-tiaen-72,
+	Author = {Edmonds, Jack and Karp, Richard M.},
+	Date-Added = {2020-07-12 17:49:11 -0500},
+	Date-Modified = {2020-07-12 17:49:33 -0500},
+	Doi = {10.1145/321694.321699},
+	Journal = {J. Assoc. Comput. Mach.},
+	Number = {2},
+	Pages = {248--264},
+	Read = {1},
+	Title = {Theoretical improvements in algorithmic efficiency of network flow problems},
+	Volume = {19},
+	Year = {1972},
+	Bdsk-Url-1 = {https://doi.org/10.1145/321694.321699}}
+
+@article{t-stust-71,
+	Author = {Tomizawa, Nobuaki},
+	Comments = {reweighting successive shortest paths},
+	Date-Added = {2020-07-12 17:48:56 -0500},
+	Date-Modified = {2020-07-12 17:50:04 -0500},
+	Doi = {10.1002/net.3230010206},
+	Journal = {Networks},
+	Pages = {173--194},
+	Read = {1},
+	Title = {On some techniques useful for solution of transportation network problems},
+	Volume = {1},
+	Year = {1971},
+	Bdsk-Url-1 = {https://doi.org/10.1002/net.3230010206}}
 
 @article{w-pdmia-67,
 	Author = {Waite, William M.},
@@ -20,29 +61,31 @@
 	Pages = {300--310},
 	Title = {Path detection in multidimensional iterative arrays},
 	Volume = {14},
-	Year = {1967}}
+	Year = {1967},
+	Bdsk-Url-1 = {https://doi.org/10.1145/321386.321392}}
 
 @phdthesis{i-tdgtv-87,
 	Author = {Iwano, Kazuo},
 	Date-Added = {2020-04-27 10:51:51 -0500},
-	Date-Modified = {2020-04-27 10:54:35 -0500},
+	Date-Modified = {2020-07-13 13:40:56 -0500},
 	Month = {October},
 	School = {Princeton Univ.},
-	Title = {Tow-Dimensional Dynamic Graphs and their {VLSI} Applications},
+	Title = {Two-Dimensional Dynamic Graphs and their {VLSI} Applications},
 	Url = {https://search.proquest.com/docview/303485362},
-	Year = {1987}}
+	Year = {1987},
+	Bdsk-Url-1 = {https://search.proquest.com/docview/303485362}}
 
 @article{kmw-ocure-67,
 	Author = {Karp, Richard M. and Miller, Raymond E. and Winograd, Shmuel},
 	Date-Added = {2020-04-24 14:43:51 -0500},
-	Date-Modified = {2020-04-24 16:15:32 -0500},
+	Date-Modified = {2020-07-12 17:34:29 -0500},
 	Doi = {10.1145/321406.321418},
 	Journal = {J. Assoc. Comput. Mach.},
 	Keywords = {periodic graphs},
 	Number = {3},
 	Pages = {563--590},
 	Read = {1},
-	Title = {The organization of comptuations for uniform recurrence equations},
+	Title = {The organization of computations for uniform recurrence equations},
 	Volume = {14},
 	Year = {1967},
 	Bdsk-Url-1 = {https://doi.org/10.1145/321406.321418}}
